infra/4-1-deplyoment-years.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-years
  namespace: gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-years
  template:
    metadata:
      labels:
        app: service-years
    spec:
      containers:
        - name: service-years
          image: docker.redby.fr/gallery/service-years:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: photos-storage
              mountPath: /photos
              readOnly: true
      volumes:
        - name: photos-storage
          persistentVolumeClaim:
            claimName: photos-pvc
