infra/4-2-deplyoment-albums.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-albums
  namespace: gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-albums
  template:
    metadata:
      labels:
        app: service-albums
    spec:
      containers:
        - name: service-albums
          image: docker.redby.fr/gallery/service-albums:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: photos-storage
              mountPath: /photos
              readOnly: true
      volumes:
        - name: photos-storage
          persistentVolumeClaim:
            claimName: photos-pvc
