infra/4-3-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: gallery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker.redby.fr/gallery/frontend:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
