infra/4-6-deployment-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache
          image: redis:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1Gi"
