infra/5-1-service-years.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-years
  namespace: gallery
spec:
  selector:
    app: service-years
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
