infra/5-2-service-albums.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-albums
  namespace: gallery
spec:
  selector:
    app: service-albums
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
