infra/5-3-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
  namespace: gallery
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
