infra/5-4-service-cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cache
  namespace: gallery
spec:
  selector:
    app: service-cache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
