infra/5-7-service-random.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-random
  namespace: gallery
spec:
  selector:
    app: random
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
